# BullsAndCows

./: README.md
projects/: CMakeLists.txt
projects/bineries/: bc.json
projects/game_view/: BullsAndCows.GameView.cmake
projects/game_view/gui/: game_view.ui
projects/game_view/src/: main.cpp
projects/game_view/src/controllers/: game_controller.cpp  game_controller.h
projects/game_view/src/views/: game_view.cpp  game_view.h
projects/model/: BullsAndCows.Model.cmake
projects/model/src/: common_operations.hpp  enums.cpp  enums.hpp  game_process.cpp  game_process.hpp
projects/model/src/brains/: brain_interface.hpp  standart_brain.cpp  standart_brain.hpp
projects/model/src/core/: enums.cpp  enums.hpp  game_value.cpp
projects/model/src/elements/: game_brain.cpp  game_brain.hpp  game_brain_interface.hpp  game_process.cpp  game_process.hpp  game_rules.cpp  game_rules.hpp  game_value.hpp
projects/model/src/rules/: standart_game_value_node.cpp  standart_game_value_node.hpp  standart_rules.cpp  standart_rules.hpp
projects/simulation/: BullsAndCows.Simulation.cmake
projects/simulation/gui/: simulation_view.ui
projects/simulation/src/: main.cpp
projects/simulation/src/threads/: thread_simulation.cpp  thread_simulation.h
projects/simulation/src/tools/: time_profiler.hpp
projects/simulation/src/views/: simulation_view.cpp  simulation_view.h
projects/strategy_calculation/: BullsAndCows.StrategyCalculation.cmake
projects/strategy_calculation/src/: main.cpp
projects/tests/: CMakeLists.txt
projects/tests/src/unit_tests/: unit-standart_brain_test.cpp
